--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "type": "module",
   "license": "MIT",
   "scripts": {
-    "dev": "cross-env NODE_ENV=development tsx watch server/_core/index.ts",
-    "build": "vite build && esbuild server/_core/index.ts --platform=node --packages=external --bundle --format=esm --outdir=dist",
-    "start": "NODE_ENV=production node dist/index.js",
+    "dev": "cd client && pnpm dev",
+    "build": "cd client && pnpm build",
+    "start": "cd client && pnpm build && npx serve -s dist -l $PORT",
     "check": "tsc --noEmit",
     "format": "prettier --write .",
     "test": "vitest run",
