--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,13 @@
     "wouter": "^3.7.1"
   },
   "devDependencies": {
+    "@types/node": "^25.0.3",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.1",
     "@vitejs/plugin-react": "^5.0.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
+    "tailwindcss": "^3.4.16",
     "typescript": "^5.9.3",
     "vite": "^7.1.9"
   }
